--- a/bower.json
+++ b/bower.json
@@ -21,9 +21,12 @@
     "/tests/"
   ],
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.0.0"
+    "polymer": "Polymer/polymer#^1.0.0",
+    "iron-image": "PolymerElements/iron-image#~1.0.2",
+    "viz.js": "^1.3.0"
   },
   "devDependencies": {
-    "web-component-tester": "Polymer/web-component-tester#^2.0.5"
+    "web-component-tester": "Polymer/web-component-tester#^2.0.5",
+    "iron-component-page": "PolymerElements/iron-component-page#^1.1.5"
   }
 }
